# qml-template

./: CMakeLists.txt
src/: Main.qml  main.cpp
